# FooAna

./: CMakeLists.txt  README.md
examples/A2/: Analysis.C  TreeReader.C  WriteTree.C  config.rootrc
examples/A2/data/: calib_short
examples/event/: CustomEvent.C  Read.C  Write.C  run.C
include/: FAAnalysis.h  FAAnalysisA2.h  FAAnalysisCLAS12.h  FAAnalysisResult.h  FAConfig.h  FAConfigA2.h  FAConfigCLAS12.h  FAEventA2.h  FAEventA2KF.h  FAEventA2_B.h  FAEventA2_BF1.h  FAEventA2_BF2.h  FAEventA2_BF3.h  FAEventA2_BF4.h  FAEventA2_BIF1.h  FAEventA2_BIF2.h  FAEventA2_BIF3.h  FAEventA2_BIF4.h  FAEventBase.h  FAEventBaseA2.h  FAEventCLAS12_B.h  FAEventCLAS12_BI.h  FAEventT.h  FAFooAna.h  FAParticle.h  FAParticleA2.h  FAParticleA2MC_B.h  FAParticleA2_B.h  FAParticleA2_BF1.h  FAParticleCLAS12MC_B.h  FAParticleCLAS12_B.h  FAParticleMC.h  FAParticleMCA2.h  FAProgressClient.h  FAProgressServer.h  FAReaderSWeights.h  FAUtils.h  FAUtilsA2.h  FAUtilsCLAS12.h  FAVar.h  (+15 more)
src/: FAAnalysis.cxx  FAAnalysisA2.cxx  FAAnalysisCLAS12.cxx  FAAnalysisResult.cxx  FAEventA2.cxx  FAEventA2KF.cxx  FAEventBase.cxx  FAEventBaseA2.cxx  FAEventT.cxx  FAParticle.cxx  FAParticleA2.cxx  FAParticleA2KF.cxx  FAParticleMC.cxx  FAParticleMCA2.cxx  FAProgressClient.cxx  FAProgressServer.cxx  FAReaderSWeights.cxx  FAUtils.cxx  FAUtilsA2.cxx  FAUtilsCLAS12.cxx  FAVar.cxx  FAVarAbs.cxx  FAVarFiller.cxx  FAVarHistogram.cxx  FAVarList.cxx  FAVarParticleA2.cxx  FAVarParticleA2KF.cxx  FAVarParticleA2_CoincT.cxx  FAVarParticleCLAS12.cxx  FAVarPlotter.cxx  FAVarPlotterEntry.cxx  FAVector3.cxx  FAVector4.cxx  FAWrapPrim.cxx
